<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- log in panel -->
	<string name="AccountID">Account ID</string>
	<string name="Password">Password</string>
	<string name="Controlpanel">Control panel</string>
	<string name="Error">Error</string>
	<string name="forgottenSuccess">Recovery email has been sent</string>
	<string name="forgottenLoading">Checking…</string>
	<string name="forgottenFailure">Unable to start recovery procedure</string>
	<string name="AccountIDcannotbeempty">Account ID cannot be empty.</string>
	<string name="Close">Close</string>
	<string name="Login">Login</string>
	<string name="ForgottenPassword">Forgotten password?</string>
	<string name="InvalidAccountIDorpassword">Invalid Account ID or password</string>
	<string name="Back">Back</string>
	<string name="Submit">Submit</string>
	<string name="app_name">Control panel - OVH</string>
	<string name="Web">Web</string>
	<string name="Dedicated">Dedicated</string>
	<string name="Cloud">Cloud</string>
	<string name="Telecom">Telecom</string>
	<string name="Billing">Billing</string>
	<string name="Support">Support</string>
	<string name="Myaccount">My account</string>

	<string name="Domains">Domains</string>
	<string name="Platform">Platform</string>
	<string name="service">Service:</string>
	<string name="Loading">Loading…</string>
	<string name="retry">Retry</string>
	<string name="cluster">Cluster:</string>
	<string name="zone">Zone:</string>
	<string name="sla">SLA Monitoring:</string>

</resources>
